--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Calculator Results</title>
-    </head>
-    <body>
-        <!-- Your HTML code goes here! -->
+{% extends "home.html" %}
+
+{% block content %}
+
+  <p>
+    You chose to {{ operation }} {{ operand_one }} and {{ operand_two }}. Your
+    result is: {{ result }}
+  </p>
 
 
-
-
-
-        
-    </body>
-</html>
+{% endblock %}
